src/objects/Service_Request__c.object
<CustomObject>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <label>Assigned To</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assigned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Service Requests</relationshipLabel>
        <relationshipName>Service_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Service Request</label>
    <nameField>
        <displayFormat>SR-{00000}</displayFormat>
        <label>Service Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Requests</pluralLabel>
    <recordTypes>
        <fullName>Type_I</fullName>
        <active>true</active>
        <label>Type I</label>
    </recordTypes>
    <recordTypes>
        <fullName>Type_II</fullName>
        <active>true</active>
        <label>Type II</label>
    </recordTypes>
    <recordTypes>
        <fullName>Type_III</fullName>
        <active>true</active>
        <label>Type III</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>